clang/test/BSC/Negative/Ownership/RuleCheck/own_borrow_conflict_struct/own_borrow_conflict_struct.cbs
// RUN: %clang_cc1 -verify %s

struct Container {
    int *_Owned _Borrow data; // expected-error {{cannot combine '_Owned' and '_Borrow' qualifiers on the same type}}
};